Remove ListUtil and Fields classes